pi.css
/* ... */
/* Location containers */
.loccont {
    position: absolute;
    height:114px;
    width:205px;
}

.loccont .agentarea {
    position: absolute;
    top:0; left:0;
    height:46px;
    width:100%;
    border-radius: 5px;
    z-index:50;
    text-align: center;
    /* background:rgba(0, 0, 0, 0.3);
    box-shadow:0 0 5px 5px rgba(0, 0, 0, 0.3);
    padding:4px; */
}
.loccont .agentarea.active_slot {
    box-shadow: 0 0 2px 2px rgb(255, 255, 255) !important;
    border:solid 2px red; /* because it's an instant action */
    border-width:2px !important;
    cursor: pointer !important;
}

/* Location slots */
.locslot {
    position: absolute;
    height:64px;
    width:64px;
    bottom:0;
    /* box-shadow: 0 0 0 4px rgba(255, 0, 255, 0.658); */
}
.locslot.location_slot { left:34%; }
.locslot.crime_slot { right:0; }

.locslot .stockitem {
    background-size: 448px;
    border-radius: 5px;
    box-shadow: 1px 1px 2px 1px rgba(0, 0, 0, 0.75);
    border: solid 0px #00000066;
}
.locslot .stockitem.fake_tile {
    box-shadow:none;
    background:none;
}
.locslot .active_slot:not(.no_x_tile) {
    border-width:1px !important;
    box-shadow: 0 0 4px 6px rgb(255, 255, 255) !important;
    cursor: pointer !important;
}
.locslot .active_slot.stockitem_selected {
    border-width:1px !important;
    box-shadow: 0 0 4px 6px rgb(0, 0, 255) !important;
}

.cube {
    z-index:300;
    position: absolute;
    height:15px;
    width:15px;
    background-color: #000;
    border: solid 1px rgba(0, 0, 0, 0.5);
    border-width: 0 1px 1px 0;
    box-shadow: 1px 1px 2px 1px rgba(0, 0, 0, 0.5);
}
.cube.blue { background-color:hsl(230, 100%, 55%); }
.cube.green { background-color:#0c0; }
.cube.purple { background-color:#e0e; }
.cube.red { background-color:#ff3300; }
.cube.yellow { background-color:#fe0; }

.card,
#evidence .stockitem,
#evidence_discard .stockitem,
#playerdisplays .stockitem,
#myevidence .stockitem,
#myhand .stockitem {
    box-shadow:2px 2px 3px 0px rgba(0, 0, 0, 0.66);
    border-radius: 8px;
}

#myhand-wrap { float:left; height:180px; width: 316px; margin-right:.5em; }
#myevidence-wrap { float:left; height:180px; width: 700px; }

.spectatorMode #myhand-wrap,
.spectatorMode #myevidence-wrap {
    display: none;
}

.locslot .cube20,
.locslot .disc30 {
    z-index:100;
    position: absolute;
}
.locslot .locslot_cubes {
    position: absolute;
    bottom:-2px;
    left:-2px;
    height:50px;
    width:50px;
}
/* Bottom left */
/*
 Cubes and disc on a tile:
 Closest to the middle looks best, so we start there.
    ------------
    |       d  |
    | 4 3  ddd |
    | 2 1   d  |
    | 6 5      |
    ------------
*/
.locslot .cube20:nth-of-type(1) { bottom:13px; left:17px; z-index:201; }
.locslot .cube20:nth-of-type(2) { bottom:13px; left: 0px; z-index:201; }
.locslot .cube20:nth-of-type(3) { bottom:26px; left:17px; z-index:203; }
.locslot .cube20:nth-of-type(4) { bottom:26px; left:0px; z-index:203; }
.locslot .cube20:nth-of-type(5) { bottom:0; left:17px; z-index:200; }
.locslot .cube20:nth-of-type(6) { bottom:0; left: 0px; z-index:200; }

/* Top right, so we can still see the image and the cubes */
.locslot .disc30 {
    top:18px;
    left:33px;
}
/* Regarding multiple discs on one locslot: Yes, there can only ever be one disc
   on a tile. If a user manually moves one there it stays there, unless we find
   a full match later. Then we move it back to the agentarea. A full match is a
   full match, there is no sense in keeping a wrongly manually placed disc there
   then. This might count as a very very minor 'helping the player'; but it's
   really too obvious not to tell them. TODO: implement this in the backend. */


.investigator {
    z-index:100;
    position: relative;
    height:36px;
    width:36px;
    margin:3px;
    background-image: url("img/investigators.png");
    background-size:182px;
    border-radius: 4px;
    box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.75);
}
.investigator_red { background-position: 0px 0px }
.investigator_blue { background-position: -36px 0px }
.investigator_yellow { background-position: -72px 0px }
.investigator_green { background-position: -108px 0px }
.investigator_purple { background-position: -144px 0px }

.agentarea .investigator {
    display: inline-block;
    margin-right:3px;
}
.agentarea .investigator:last-of-type {
    margin-right:0;
}

.investigator .cube20,
.investigator .disc30 {
    position: absolute;
}
.investigator .cube20 {
    top:-2px;
}
.investigator .disc30 {
    bottom:-4px;
}
.investigator > div:nth-of-type(1) { left:-3px; z-index:200; }
.investigator > div:nth-of-type(2) { left:8px;z-index:201; }
.investigator > div:nth-of-type(3) { left:19px; z-index:202; }

.cube20 {
    height: 20px;
    width: 20px;
    background-image: url("img/common/cubes20_hc.png");
}
.cube20_blue { background-position: -20px 0px }
.cube20_red { background-position: -40px 0px }
.cube20_yellow { background-position: -60px 0px }
.cube20_green { background-position: -80px 0px }
.cube20_white { background-position: -100px 0px }
.cube20_black { background-position: -120px 0px }
.cube20_brown { background-position: -140px 0px }
.cube20_purple { background-position: -160px 0px }
.cube20_pink { background-position: -180px 0px }
.cube20_orange { background-position: -200px 0px }

.disc30 {
    height: 25px;
    width: 25px;
    background-image: url("img/common/discs30_hc.png");
    background-size: cover;
}
.disc30_blue { background-position: 0px 0px }
.disc30_green { background-position: -25px 0px }
.disc30_beige { background-position: -50px 0px }
.disc30_orange { background-position: -75px 0px }
.disc30_white { background-position: -100px 0px }
.disc30_black { background-position: -125px 0px }
.disc30_red { background-position: -150px 0px }
.disc30_yellow { background-position: -175px 0px }
.disc30_gray { background-position: -200px 0px }
.disc30_purple { background-position: -225px 0px }
/* ... */

